Add minor code improvements